--- a/src/content/en/index.mdx
+++ b/src/content/en/index.mdx
@@ -1,8 +1,31 @@
----
-title: "Home Page"
----
+# Introduction
 
+Welcome to the documentation site of the SaaS Starter Template. This project is a modern, production-ready SaaS starter template built with Next.js 14, TypeScript, and Tailwind CSS.
 
-import HomepageHero from "@/components/HomepageHero";
+## ✨ Features
 
-<HomepageHero />
+### 🎨 **Beautiful Design System**
+- Clean, modern UI
+- Fully responsive design
+- Dark/Light mode support
+- Customizable color schemes
+- Beautiful animations and transitions
+
+### 🔧 **Essential SaaS Components**
+- **Authentication**: Login, Register, Password Reset
+- **Landing Pages**: Hero, Features, Pricing, Testimonials, FAQ
+- **Blog System**: Markdown-based blog with frontmatter
+- **Case Studies**: Showcase your success stories
+- **Dashboard**: User dashboard and analytics
+- **Payment Integration**: Stripe-ready payment system
+
+### 🛠 **Developer Experience**
+- **TypeScript**: Full type safety
+- **Next.js 14**: Latest App Router with static site generation
+- **Tailwind CSS**: Utility-first CSS framework
+- **Component Library**: Reusable UI components
+- **ESLint & Prettier**: Code formatting and linting
+- **Responsive Design**: Mobile-first approach
+
+### 🤖 **AI-Assisted Development**
+Large Language Model friendly, can be modified using AI tools. 
