--- a/src/content/zh/index.mdx
+++ b/src/content/zh/index.mdx
@@ -1,8 +1,31 @@
----
-title: "首页"
----
+# 简介
 
+欢迎来到 SaaS 启动模板的文档站点。本项目是一个现代、生产就绪的 SaaS 启动模板，使用 Next.js 14、TypeScript 和 Tailwind CSS 构建。
 
-import HomepageHero from "@/components/HomepageHero";
+## ✨ 特性
 
-<HomepageHero />
+### 🎨 **美丽的设计系统**
+- 简洁、现代化 UI
+- 完全响应式设计
+- 暗/亮模式支持
+- 可定制的颜色方案
+- 美丽的动画和过渡
+
+### 🔧 **必要的 SaaS 组件**
+- **身份验证**: 登录、注册、密码重置
+- **登陆页面**: 英雄、特征、定价、证言、FAQ
+- **博客系统**: 基于 Markdown 的博客，带有前言
+- **案例研究**: 展示你的成功故事
+- **仪表盘**: 用户仪表盘和分析
+- **支付集成**: Stripe 准备好的支付系统
+
+### 🛠 **开发者体验**
+- **TypeScript**: 完全的类型安全
+- **Next.js 14**: 最新的应用路由器，支持静态站点生成
+- **Tailwind CSS**: 实用优先的 CSS 框架
+- **组件库**: 可重用的 UI 组件
+- **ESLint & Prettier**: 代码格式化和linting
+- **响应式设计**: 移动优先的方法
+
+### 🤖 **AI 辅助开发**
+大语言模型友好，可以采用 AI 工具进行修改。
